@@ -2,6 +2,7 @@ GAIM: The Pimpin' Penguin IM Clone thats good for the soul!
 
 version 0.9.19:
 	* Oscar can sign in to ICQ now
+	* Graphical Smiley Faces
 
 version 0.9.18 (06/02/2000):
 	* Logging in works better for oscar
